# GetCTData

./: .ctvars.cpp.swp  .ctvars.h.swp  .getctdata.cpp.swp  CMakeLists.txt  CMakeLists.txt~  ctvars.cpp  ctvars.cpp~  ctvars.h  ctvars.h~  getctdata.cpp  original_getctdata.cpp  read_tiff.c  test_getctdata.cpp
