
INCLUDE_DIRECTORIES(
${MINC2_INCLUDE_PATH} ${HDF5_INCLUDE_PATH} ${NETCDF_INCLUDE_PATH}
${OPT_recon_SOURCE_DIR}/MINC
${OPT_recon_SOURCE_DIR}/GetOPTData
${OPT_recon_SOURCE_DIR}/GetCTData
)

SET(GETCTDATA_SRC
${OPT_recon_SOURCE_DIR}/GetOPTData/filehandle.cpp
ctvars.cpp
getctdata.cpp
)
ADD_EXECUTABLE(ct_to_minc ${GETCTDATA_SRC})
TARGET_LINK_LIBRARIES(ct_to_minc useMINC2 tiff)

INSTALL(TARGETS ct_to_minc DESTINATION bin)
